tests/NormalTests/paczka1/small_fuzzy/50957139.err
Error in line 6: A937 A937 46,9
Error in line 3: qVPGXIUXr S806 1,8
Error in line 4: Cg4 S806 47,6
Error in line 13: Cg4 S351 63,7
